[package]
name = "krs"
description = "Simple Kafka command-line tool"
version = "0.2.0"
authors = ["Ivan Gozali <gozaliivan@gmail.com>"]
repository = "https://github.com/igozali/krs"
homepage = "https://github.com/igozali/krs"
license = "Apache-2.0"
readme = "README.md"
# documentation = "https://github.com/igozali/krs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
chrono = "~0.4.9"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", rev = "3e0ede44" }
dotenv = "~0.15.0"
zookeeper = "0.5"
futures = "~0.1"
tokio = "~0.1"

serde = { version = "~1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "~1.0"
