[package]
name = "krs"
version = "0.2.4"
authors = ["Ivan Gozali <gozaliivan@gmail.com>"]
description = "Simple Kafka command-line tool"
documentation = "https://github.com/igozali/krs"
homepage = "https://github.com/igozali/krs"
repository = "https://github.com/igozali/krs"
readme = "README.md"
keywords = ["kafka", "rdkafka", "consumer", "producer"]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"
edition = "2018"
build = "build.rs"

[[bin]]
bench = false
path = "src/main.rs"
name = "krs"

[dependencies]
clap = "~2.33.0"
dotenv = "~0.15.0"
chrono = "~0.4.9"
zookeeper = "0.5"

rdkafka = "~0.22.0"
# rdkafka depends on futures 0.1.29
futures = "~0.1.29"
# No need to move to tokio 0.2 just yet, since rdkafka still hasn't moved to
# async/await yet
tokio = "~0.1.22"

serde = { version = "~1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "~1.0"

[dev-dependencies]
rand = "~0.7.2"
scopeguard = "~1.0.0"
